02-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: javanode
  namespace: dcli-core
spec:
  replicas: 2
  selector:
    matchLabels:
      app: javanode
  template:
    metadata:
      labels:
        app: javanode
    spec:
      containers:
      - name: javanode
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: javanode-service
  namespace: dcli-core
spec:
  type: NodePort
  selector:
    app: javanode
  ports:
  - port: 80
    targetPort: 80
