03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: javanode-ingress
  namespace: dcli-core
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    external-dns.alpha.kubernetes.io/hostname: awsint.core.dcli.com
spec:
  rules:
  - host: awsint.core.dcli.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: javanode-service
            port:
              number: 80
